syntax = "proto3";

package com.coralogixapis.alerts.v3;

import "google/protobuf/wrappers.proto";

message FlowType  {
    repeated FlowStages stages = 1 ;
    google.protobuf.BoolValue enforce_suppression = 2;
}

message FlowStages {
    oneof flow_stages {
        FlowStagesGroups flow_stages_groups = 10;
    }
    google.protobuf.Int64Value timeframe_ms = 3;
    TimeframeType timeframe_type = 4;
}

message FlowStagesGroups {
    repeated FlowStagesGroup groups = 1;
}

message FlowStagesGroup {
    repeated FlowStagesGroupsAlertDefs alert_defs = 1;
    NextOp next_op = 2;
    AlertsOp alerts_op = 3;
}

message FlowStagesGroupsAlertDefs {
    google.protobuf.StringValue id = 1;
    google.protobuf.BoolValue not = 2;
}

enum NextOp {
    NEXT_OP_AND_OR_UNSPECIFIED = 0;
    NEXT_OP_OR = 1;
}

enum AlertsOp {
    ALERTS_OP_AND_OR_UNSPECIFIED = 0;
    ALERTS_OP_OR = 1;
}

enum TimeframeType {
    TIMEFRAME_TYPE_UNSPECIFIED = 0;
    TIMEFRAME_TYPE_UP_TO = 1;
}
