syntax = "proto3";
package com.coralogixapis.alerts.v3;

import "google/protobuf/wrappers.proto";


message MetricMissingValues {
  oneof missing_values {
    google.protobuf.BoolValue replace_with_zero = 1;
    google.protobuf.UInt32Value min_non_null_values_pct = 2;
  }
}
